--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block title %}>Пост {{ post_detail.text|truncatechars:30 }} {% endblock %}
+{% load thumbnail %}
 {% block content %}
 	<div class="container py-5">
 		<div class="row">
@@ -29,13 +30,17 @@
 						</a>
 					</li>
 				</ul>
+				{% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+					<img class="card-img my-2" src="{{ im.url }}">
+				{% endthumbnail %}
 			</aside>
+
 			<article class="col-12 col-md-9">
 				<p>{{ post_detail.text }}</p>
 
 				{% if post_detail.author.pk == request.user.pk %}<a class="btn btn-primary"
 																	href="{% url 'posts:post_edit' post_detail.id %}">
-				редактировать запись
+					редактировать запись
 				</a>
 				{% endif %}
 			</article>
